--- a/signup.html
+++ b/signup.html
@@ -2,49 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Luna - Sign Up</title>
-  <link rel="stylesheet" href="signup.css" />
+  <link rel="stylesheet" href="signup.css"/>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-storage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
 </head>
-
 <body class="signup-body">
   <div class="form-container">
     <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Logo" class="logo" />
     <h1>Create Your Luna Account</h1>
-
     <form id="signupForm">
       <input type="text" id="name" placeholder="Full Name" required />
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
+       <input type="text" id="wakewordInput" placeholder="Enter your wake word (e.g. Luna)" hidden/>
 
       <div class="record-wakeword">
         <p class="record-title">Record Your Wake Word</p>
-        <button type="button" class="record-btn" onclick="handleWakeWordRecording()">
+        <button type="button" id="recordBtn">
           <img src="https://cdn-icons-png.flaticon.com/512/727/727245.png" alt="Mic" class="mic-icon">
           <span>Start Recording</span>
         </button>
         <p class="record-status" id="record-status">Not recording</p>
-      </div>
 
       <button type="submit">Sign Up</button>
     </form>
 
-    <div id="spinnerOverlay" class="spinner-overlay" style="display:none;">
-      <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Spinner" class="spinner-logo" />
-    </div>
-
     <p class="login-link">Already have an account? <a href="login.html">Login</a></p>
   </div>
-
-     <div id="spinnerOverlay" class="spinner-overlay">
+   <div id="spinnerOverlay" class="spinner-overlay" style="display:none;">
       <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Spinner" class="spinner-logo" />
     </div>
+
+   
+  </div>
   <section class="about-luna">
   <h2>Why Choose <span class="luna">Luna</span>?</h2>
   <div class="features">
@@ -92,9 +87,11 @@
   <div class="credits">
     <p>&copy; 2025 Luna AI - Created by AyTech</p>
   </div>
+    <div id="spinnerOverlay" class="spinner-overlay">
+      <img src="https://i.imgur.com/8KlT8jJ.png" alt="Luna Spinner" class="spinner-logo" />
+    </div>
 </section>
-  <script>
-  // Firebase config (unchanged)
+<script>
   const firebaseConfig = {
     apiKey: "AIzaSyDN4hgEwEZkL0gzEmlRWlabjAEt6fY3c88",
     authDomain: "luna-app-a3c50.firebaseapp.com",
@@ -104,124 +101,78 @@
     appId: "1:683159311462:web:2bef289d271172267d49a7"
   };
   firebase.initializeApp(firebaseConfig);
-
   const auth = firebase.auth();
   const db = firebase.firestore();
-  const storage = firebase.storage();
 
-  let mediaRecorder;
-  let wakeWordBlob;
-  let recordedWakeWord = "";
-  let audioChunks = [];
-  let recognition;
-  let stream;
+  let mediaRecorder, audioChunks = [], wakeWordBlob, recordedWakeWord = "", audioURL = "";
 
-  async function handleWakeWordRecording() {
+  document.getElementById("recordBtn").addEventListener("click", async () => {
+    const recordBtn = document.getElementById("recordBtn");
     const status = document.getElementById("record-status");
-    const email = document.getElementById("email").value.trim();
-
-    if (!email) {
-      Toastify({ text: "Please enter your email first", duration: 3000, backgroundColor: "#ffa000" }).showToast();
-      return;
-    }
-
-    if (mediaRecorder && mediaRecorder.state === "recording") {
-      stopRecording();
-      return;
-    }
 
     try {
-      stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
       mediaRecorder = new MediaRecorder(stream);
       audioChunks = [];
 
-      mediaRecorder.ondataavailable = (event) => audioChunks.push(event.data);
+      mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
+
       mediaRecorder.onstop = async () => {
-        wakeWordBlob = new Blob(audioChunks, { type: 'audio/webm' });
+        const audioBlob = new Blob(audioChunks, { type: "audio/webm" });
+        wakeWordBlob = audioBlob;
 
-        // Upload audio to Firebase
-        const audioRef = storage.ref().child(`wakewords/${email}_wakeword.webm`);
-        try {
-          await audioRef.put(wakeWordBlob);
-        } catch (e) {
-          Toastify({ text: "Audio upload failed", duration: 3000, backgroundColor: "#e53935" }).showToast();
+        const wakewordInput = document.getElementById("wakewordInput");
+        recordedWakeWord = wakewordInput.value || "Luna";
+
+        const formData = new FormData();
+        formData.append("file", audioBlob);
+        formData.append("upload_preset", "luna_unsigned");
+
+        const response = await fetch("https://api.cloudinary.com/v1_1/dm8xazeob/raw/upload", {
+          method: "POST",
+          body: formData,
+        });
+
+        const data = await response.json();
+        if (!response.ok) {
+          alert("Cloudinary upload failed: " + data.error.message);
+          return;
         }
+
+        audioURL = data.secure_url;
+        speechSynthesis.speak(new SpeechSynthesisUtterance(`Wake word recorded as ${recordedWakeWord}`));
+        status.textContent = `Wake word saved: "${recordedWakeWord}"`;
       };
 
-      recognition = new webkitSpeechRecognition();
-      recognition.lang = "en-US";
-      recognition.interimResults = false;
-
-      recognition.onstart = () => {
-        status.textContent = "Recording... Please say your wake word";
-      };
-
-      recognition.onresult = async (event) => {
-        recordedWakeWord = event.results[0][0].transcript.trim().toLowerCase();
-        status.textContent = `Recognized: "${recordedWakeWord}"`;
-
-        // Save transcript to Firestore
-        try {
-          await db.collection("wakewords").doc(email).set({ wakeword: recordedWakeWord });
-          Toastify({ text: "Wake word saved", duration: 3000, backgroundColor: "#4caf50" }).showToast();
-        } catch (err) {
-          Toastify({ text: "Error saving wakeword: " + err.message, duration: 3000, backgroundColor: "#e53935" }).showToast();
-        }
-      };
-
-      recognition.onerror = (e) => {
-        status.textContent = "Speech recognition failed";
-        console.error("Recognition error", e);
-      };
-
-      recognition.onend = () => {
-        status.textContent += " (Recording ended)";
-      };
-
-      recognition.start();
       mediaRecorder.start();
+      status.textContent = "Recording...";
+      recordBtn.disabled = true;
 
-      // Automatically stop after 5 seconds
       setTimeout(() => {
-        stopRecording();
-      }, 5000);
-
-    } catch (error) {
-      Toastify({ text: "Mic permission error: " + error.message, duration: 3000, backgroundColor: "#d32f2f" }).showToast();
+        mediaRecorder.stop();
+        recordBtn.disabled = false;
+        recordBtn.innerHTML = `<img src="https://cdn-icons-png.flaticon.com/512/727/727245.png" class="mic-icon" /> Re-record Wake Word`;
+      }, 3000);
+    } catch (err) {
+      alert("Microphone access denied or not available.");
     }
-  }
+  });
 
-  function stopRecording() {
-    if (mediaRecorder && mediaRecorder.state === "recording") {
-      mediaRecorder.stop();
-    }
-    if (recognition) {
-      recognition.stop();
-    }
-    if (stream) {
-      stream.getTracks().forEach(track => track.stop());
-    }
-
-    document.getElementById("record-status").textContent = "Recording stopped";
-  }
-
-  const form = document.getElementById("signupForm");
-  form.addEventListener("submit", async (e) => {
+  document.getElementById("signupForm").addEventListener("submit", async (e) => {
     e.preventDefault();
 
     const name = document.getElementById("name").value.trim();
     const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value;
     const spinner = document.getElementById("spinnerOverlay");
-    const btn = form.querySelector("button[type='submit']");
+    const btn = document.querySelector("button[type='submit']");
 
-    if (!recordedWakeWord || !wakeWordBlob) {
-      Toastify({ text: "Please record your wake word before signing up.", duration: 3000, backgroundColor: "#ffa000" }).showToast();
+    if (!wakeWordBlob || !audioURL) {
+      Toastify({ text: "Please record your wake word!", duration: 3000, backgroundColor: "#ffa000" }).showToast();
       return;
     }
 
     btn.disabled = true;
-    btn.textContent = "Signing up...";
     spinner.style.display = "flex";
 
     try {
@@ -231,47 +182,32 @@
       await db.collection("users").doc(uid).set({
         name,
         email,
-        createdAt: new Date()
+        wakeword: recordedWakeWord,
+        audioURL,
+        createdAt: new Date(),
       });
 
-      const audioRef = storage.ref().child(`wakewords/${uid}.webm`);
-      await audioRef.put(wakeWordBlob);
-
-      localStorage.setItem("lunaUser", name);
       greetUser(name);
+      const wakeWordUtterance = new SpeechSynthesisUtterance(`Your wake word is ${recordedWakeWord}`);
+      speechSynthesis.speak(wakeWordUtterance);
 
       Toastify({ text: `Welcome, ${name}!`, duration: 3000, backgroundColor: "#2563eb" }).showToast();
 
       setTimeout(() => {
-        spinner.style.display = "none";
         window.location.href = "dashboard.html";
-      }, 3000);
+      }, 3500);
     } catch (error) {
       Toastify({ text: error.message, duration: 3000, backgroundColor: "#d32f2f" }).showToast();
-      btn.disabled = false;
-      btn.textContent = "Sign Up";
       spinner.style.display = "none";
+      btn.disabled = false;
     }
   });
 
-   function greetUser(name) {
-  const greeting = `Welcome, ${name}. Luna is happy to meet you!`;
-  const utterance = new SpeechSynthesisUtterance(greeting);
-
-  function setVoiceAndSpeak() {
-    const voices = speechSynthesis.getVoices();
-    const femaleVoice = voices.find(v => v.name.includes("Google") || v.name.toLowerCase().includes("female"));
-    if (femaleVoice) utterance.voice = femaleVoice;
+  function greetUser(name) {
+    const greeting = `Welcome, ${name}. Luna is now activated and ready to help!`;
+    const utterance = new SpeechSynthesisUtterance(greeting);
     speechSynthesis.speak(utterance);
   }
-
-  // Wait until voices are loaded
-  if (speechSynthesis.getVoices().length === 0) {
-    speechSynthesis.onvoiceschanged = setVoiceAndSpeak;
-  } else {
-    setVoiceAndSpeak();
-  }
-}
 </script>
 
 </body>
